<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <ImageView android:layout_width="150dp"
               android:layout_height="150dp"
               android:src="@drawable/ic_launcher"
               android:layout_gravity="center_horizontal"
               android:contentDescription="@string/info_logo"/>

    <EditText android:id="@+id/et_username"
              android:layout_width="250dp"
              android:layout_height="wrap_content"
              android:inputType="textEmailAddress"
              android:hint="@string/hint_email"
              android:gravity="center_horizontal"/>

    <EditText android:id="@+id/et_password"
              android:layout_width="250dp"
              android:layout_height="wrap_content"
              android:inputType="textPassword"
              android:hint="@string/hint_password"
              android:gravity="center_horizontal" />

    <Button android:id="@+id/btn_login"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:textSize="16sp"
            android:textStyle="bold" />

    <Button android:id="@+id/btn_register"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textSize="14sp" />

    <TextView android:id="@+id/tv_feedback"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content" />

</LinearLayout>