<?xml version="1.0" encoding="utf-8"?>
<ViewSwitcher xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/vs_detail"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="match_parent">

        <ImageView android:id="@+id/iv_detailImage"
                   android:layout_width="128dp"
                   android:layout_height="220dp"
                   android:contentDescription="@string/imageContent"
                   android:paddingStart="0dp"
                   android:paddingEnd="10dp"
                   android:src="@drawable/loading" />

        <TextView android:id="@+id/tv_detailTitle"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_toEndOf="@id/iv_detailImage"
                  android:textSize="20sp"
                  android:textStyle="bold"
                  android:padding="0dp" />

        <TextView android:id="@+id/tv_detailSubtitle"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_below="@id/tv_detailTitle"
                  android:layout_toEndOf="@id/iv_detailImage"
                  android:textSize="16sp"
                  android:padding="0dp" />

        <TextView android:id="@+id/tv_labelAuthors"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_below="@id/iv_detailImage"
                  android:text="@string/labelAuthors"
                  android:textSize="16sp"
                  android:padding="0dp"
                  android:layout_marginEnd="10dp"
                  android:paddingBottom="5dp" />

        <TextView
                android:id="@+id/tv_detailAuthors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_detailImage"
                android:layout_toEndOf="@id/tv_labelAuthors"
                android:textSize="16sp"
                android:paddingBottom="5dp" />

        <TextView
                android:id="@+id/tv_labelPublisher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_detailAuthors"
                android:text="@string/labelPublisher"
                android:textSize="16sp"
                android:padding="0dp"
                android:layout_marginEnd="10dp"
                android:paddingBottom="5dp" />

        <TextView
                android:id="@+id/tv_detailPublisher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_detailAuthors"
                android:layout_toEndOf="@id/tv_labelPublisher"
                android:textSize="16sp"
                android:paddingBottom="5dp" />

        <TextView
                android:id="@+id/tv_labelPublishDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_detailPublisher"
                android:text="@string/labelPublishDate"
                android:textSize="16sp"
                android:layout_marginEnd="10dp"
                android:paddingBottom="5dp" />

        <TextView
                android:id="@+id/tv_detailPublishDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_detailPublisher"
                android:layout_toEndOf="@id/tv_labelPublishDate"
                android:textSize="16sp"
                android:paddingBottom="5dp" />

        <TextView
                android:id="@+id/tv_detailPageCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_detailPublishDate"
                android:paddingBottom="5dp" />

        <TextView
                android:id="@+id/tv_labelPageCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelPageCount"
                android:layout_below="@id/tv_detailPublishDate"
                android:layout_toEndOf="@id/tv_detailPageCount"
                android:paddingBottom="5dp"
                android:layout_marginStart="5dp" />

    </RelativeLayout>

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

        <ImageView
                android:id="@+id/iv_detailImageSwitch"
                android:layout_width="128dp"
                android:layout_height="220dp"
                android:contentDescription="@string/imageContent"
                android:paddingStart="0dp"
                android:paddingEnd="10dp"
                android:src="@drawable/loading" />

        <EditText
                android:id="@+id/et_detailTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toEndOf="@id/iv_detailImageSwitch"
                android:textSize="20sp"
                android:textStyle="bold"
                android:inputType="text"
                android:padding="0dp" />

        <EditText
                android:id="@+id/et_detailSubtitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_detailTitle"
                android:layout_toEndOf="@id/iv_detailImageSwitch"
                android:textSize="16sp"
                android:inputType="text"
                android:padding="0dp"
                android:hint="@string/hint_subtitle" />

        <TextView
                android:id="@+id/tv2_labelAuthors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_detailImageSwitch"
                android:text="@string/labelAuthors"
                android:textSize="16sp"
                android:paddingBottom="5dp"
                android:layout_marginEnd="10dp" />

        <EditText
                android:id="@+id/et_detailAuthors"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/iv_detailImageSwitch"
                android:layout_toEndOf="@id/tv2_labelAuthors"
                android:textSize="16sp"
                android:inputType="text"
                android:paddingBottom="0dp"
                android:layout_marginTop="-5dp" />

        <TextView
                android:id="@+id/tv2_labelPublisher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_detailAuthors"
                android:text="@string/labelPublisher"
                android:textSize="16sp"
                android:paddingBottom="5dp"
                android:layout_marginEnd="10dp" />

        <EditText
                android:id="@+id/et_detailPublisher"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_detailAuthors"
                android:layout_toEndOf="@id/tv2_labelPublisher"
                android:textSize="16sp"
                android:inputType="text"
                android:padding="0dp"
                android:layout_marginTop="-5dp" />

        <TextView
                android:id="@+id/tv2_labelPublishDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_detailPublisher"
                android:text="@string/labelPublishDate"
                android:textSize="16sp"
                android:paddingBottom="5dp"
                android:layout_marginEnd="10dp" />

        <EditText
                android:id="@+id/et_detailPublishDate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_detailPublisher"
                android:layout_toEndOf="@id/tv2_labelPublishDate"
                android:textSize="16sp"
                android:inputType="date"
                android:padding="0dp"
                android:layout_marginTop="-5dp" />

        <EditText
                android:id="@+id/et_detailPageCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/et_detailPublishDate"
                android:inputType="number"
                android:padding="0dp"
                android:layout_marginTop="-5dp" />

        <TextView
                android:id="@+id/tv2_labelPageCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/labelPageCount"
                android:layout_below="@id/et_detailPublishDate"
                android:layout_toEndOf="@id/et_detailPageCount"
                android:paddingBottom="5dp"
                android:layout_marginStart="5dp" />

    </RelativeLayout>

</ViewSwitcher>